add js which shows a customers current geo location

--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -41,7 +41,9 @@
       </div>
     </div>
   </div>
-<script type="text/javascript" src="{% static 'css/styles.css' %}">
+<script type="text/javascript" src="{% static 'js/styles.js' %}">
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoOk2exnpYMGhrh-7VvmdHCh5gcA-qhNM&callback=initMap">
 </script>
 
 {% endblock %}
