feat: add movieDb api
* add Movie class which creates instances of the movie json from the api
* add request.py which will handle consuming the movie api
	* get_movie get_search functions
* add index view function code whtch querys movies from database and use get_movie request to convert the database instance to class instance and add to list

the moviedb api is used to show the movies details and make it easier than creating full database of movies

--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <link rel="stylesheet" href="bootstrap.css">
-  <link rel="stylesheet" href="syles.css">
-</head>
-
-<body>
-  <nav class="navbar navbar-inverse">
-    <h1>Easy Shops</h1>
-  </nav>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+{{block.super}}
+{% load bootstrap3 %}
   <div class="container">
     <div class="row" id="map">
       <div class="col-md-8">
-        <img src="profile.jpg" class="img-responsive pro" alt="">
+        <img src="{{shop.imageprofile.url}}" class="img-responsive pro" alt="">
       </div>
       <div class="col-md-4">
-        <h3>Crazy Monkey Ent <span class="right"><a href="#" class="btn btn-primary">Subscribe</a></span></h3>
+        <h3>{{shop.shopname}} <span class="right"><a href="#" class="btn btn-primary">Subscribe</a></span></h3>
         <p><strong>Location</strong> Nairobi CBD</p>
       </div>
     </div>
@@ -52,15 +43,8 @@
       </div>
     </div>
   </div>
-
-</body>
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfeePmXWfr3eKsSfpBlGsycHdES0kyOsI&libraries=places" async defer></script> -->
-<script type="text/javascript" src="jquery-3.2.1.js">
-</script>
-<script type="text/javascript" src="index.js">
-</script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoOk2exnpYMGhrh-7VvmdHCh5gcA-qhNM&callback=initMap">
-</script>
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzagtRGEXwmPqJjQfrEbNksQx2bWkqn6Y&libraries=places" async defer></script> -->
-
-</html>
+  {% endblock %}
+  {% block scripts %}
+  {{block.super}}
+  {% bootstrap_javascript %}
+  {% endblock %}
