--- a/shop/templates/registration/registration_form.html
+++ b/shop/templates/registration/registration_form.html
@@ -22,7 +22,7 @@
               <input type="submit" class="btn btn-primary btn-sm" value="Sign Up" >
             </div>
 
-            <input type="hidden" name="next" value="/">
+            <input type="hidden" name="next" value="/setup/">
 
           </form>
 
