Fix: redirect authentication
make authentication so that you register first then redirected to setup page where you input your shop name and wallpaper,
then you are redirected to setup location

later we'll add test cases to test the save profile methods

--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
+    <div class="container-fluid">
     <nav class="navbar navbar-inverse">
         <h1>Easy Shops</h1>
         <ul class="nav navbar-nav navbar-right">
@@ -17,5 +18,7 @@
             {% endif %}
         </ul>
     </nav>
+</div>
+
 </body>
 </html>
