--- a/shop/templates/setup.html
+++ b/shop/templates/setup.html
@@ -6,19 +6,22 @@
     <h1>Setup Shop Account</h1>
     <div class="container">
             <div class="col-md-6">
-                <div class="map" id="map">
-            
-                </div>
-            </div>
-            <div class="col-md-6">
-                <form action='/setup/' method="post"  enctype="multipart/form-data">
-                  <input type="file" name="pic" accept="image/*">
-                  <input type="text" id="id_home" placeholder="Shop Name">
-                  <input type="submit" value="Submit">
-                </form>
+                <form  action="/setup/next/" method="post">
+                    {% csrf_token %}
+                    {% bootstrap_form form %}
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-primary btn-sm" value="save and continue" >
+                    </div>
+        
+                    <input type="hidden" name="next" value="/setup/next">
+        
+                    </form>
             </div>
         </div>
-      
+        <!-- <script type="text/javascript" src="{% static 'js/scripts2.js' %}">
+        </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoOk2exnpYMGhrh-7VvmdHCh5gcA-qhNM&callback=initMap">
+        </script> -->
     {% endblock %}
     {% block scripts %}
     {{block.super}}
