--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -13,13 +13,13 @@
     {% block styles %}
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
     {% endblock %}
 </head>
 <body>
     {% include 'navbar.html' %}
     {% block content %}
     
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     </script>
