--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -6,19 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-    <div class="container-fluid">
-    <nav class="navbar navbar-inverse">
-        <h1>Easy Shops</h1>
-        <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Easy Shop</a>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+              {% if user.is_authenticated and user.shopprofile %}
+            <li><a href="#about">My Shop</a></li>
             <li><a href="/logout">Logout</a></li>
+            
+            {% elif user.is_authenticated %}
+            <li class="active"><a href="#">Create Shop</a></li>
             {% else %}
-            <li><a href="/accounts/login">Login</a></li>
-            <li><a href="/accounts/register">signup</a></li>
-            {% endif %}
-        </ul>
-    </nav>
-</div>
+            <li>
+              <a href="/accounts/login">Login</a>
+            </li>
+            {% endif %}            
+
+          </ul>
+        </div>
+      </nav>
 
 </body>
 </html>
