--- a/shop/templates/setup.html
+++ b/shop/templates/setup.html
@@ -6,7 +6,7 @@
     <h1>Setup Shop Account</h1>
     <div class="container">
             <div class="col-md-6">
-                <form  action="/setup/next/" method="post">
+                <form  action="/setup/next/" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% bootstrap_form form %}
                     <div class="form-group">
