--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -15,7 +15,22 @@
       <li role="presentation"><a href="#">Trending</a></li>
     </ul>
     <div class="">
+      {% for media in medias %}
       <div class="row posts">
+        <div class="col-md-2">
+          <img src="profile.jpg" class="img-responsive img-thumbnail" alt="">
+        </div>
+        <div class="col-md-9">
+          <h3>{{media.shop.shopname}}</h3>
+          <h5>{{media.moviedb}}</h5>
+          <span class="right">1000 likes</span>
+        </div>
+        <div class="col-md-1">
+          <a href="#" class="btn btn-lg btn-info">Like</a>
+        </div>
+      </div>
+      {% endfor %}
+      <!-- <div class="row posts">
         <div class="col-md-2">
           <img src="profile.jpg" class="img-responsive img-thumbnail" alt="">
         </div>
@@ -26,19 +41,7 @@
         <div class="col-md-1">
           <a href="#" class="btn btn-lg btn-info">Like</a>
         </div>
-      </div>
-      <div class="row posts">
-        <div class="col-md-2">
-          <img src="profile.jpg" class="img-responsive img-thumbnail" alt="">
-        </div>
-        <div class="col-md-9">
-          <h5>Crazy Monkey Ent</h5>
-          <span class="right">1000 likes</span>
-        </div>
-        <div class="col-md-1">
-          <a href="#" class="btn btn-lg btn-info">Like</a>
-        </div>
-      </div>
+      </div> -->
     </div>
   </div>
 <script type="text/javascript" src="{% static 'js/styles.js' %}">
