--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -8,7 +8,7 @@
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Easy Shop</a>
+          <a class="navbar-brand" href="/">Easy Shop</a>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -18,7 +18,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
               {% if user.is_authenticated and user.shopprofile %}
-            <li><a href="#about">My Shop</a></li>
+            <li><a href="/myshop/{{user.shopprofile.id}}">My Shop</a></li>
             <li><a href="/logout">Logout</a></li>
             
             {% elif user.is_authenticated %}
