--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -9,7 +9,7 @@
         <img src="{{shop.imageprofile.url}}" class="img-responsive pro" alt="">
       </div>
       <div class="col-md-4">
-        <h3>{{shop.shopname}} <span class="right"><a href="#" class="btn btn-primary">Subscribe</a></span></h3>
+        <h3>{{shop.shopname}} <span class="right"><a href="/subscribe/{{shop.id}}" class="btn btn-primary">Subscribe</a></span></h3>
         <p><strong>Location</strong> Nairobi CBD</p>
       </div>
     </div>
