feat: add subscribe functionality
a user can subscribe to a shop

--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -9,14 +9,18 @@
         <img src="{{shop.imageprofile.url}}" class="img-responsive pro" alt="">
       </div>
       <div class="col-md-4">
-        <h3>{{shop.shopname}} <span class="right"><a href="/subscribe/{{shop.id}}" class="btn btn-primary">Subscribe</a></span></h3>
+        <h3>{{shop.shopname}} <span class="right"> {% if user.subscribe.shop.id == shop.id%} Subscribed
+        {% else %}
+        <a href="/subscribe/{{shop.id}}" class="btn btn-primary">Subscribe</a>
+          {% endif %}
+        </span></h3>
         <p><strong>Location</strong> Nairobi CBD</p>
       </div>
     </div>
   </div>
   <div class="container tabs">
     <div class="title">
-      <p>Crazy Monkey Ent </p>
+      <p>{{shop.shopname}} </p>
       <div class="search">
         <input type="text" class="form-control" id="inputEmail3" placeholder="search">
       </div>
