--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -18,7 +18,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
               {% if user.is_authenticated and user.shopprofile %}
-            <li><a href="/myshop/{{user.shopprofile.id}}">My Shop</a></li>
+            <li><a href="/myshop/{{user.shopprofile.id}}">My Shop {{user.shopprofile.shopname}}</a></li>
             <li><a href="/logout">Logout</a></li>
             
             {% elif user.is_authenticated %}
