--- a/shop/templates/search.html
+++ b/shop/templates/search.html
@@ -8,4 +8,17 @@
         <input type="text" class="form-control" placeholder="Search" name="search">
     </div>
 </form>
+
+<div class="container">
+    <div class="row">
+        {% for movie in movies %}
+        <div class="col-md-6">
+            <h3>{{movie.title}}</h3>
+            <img src="{{movie.image}}" class="img-responsive" alt="">
+            <a href="/add_movie/{{movie.id}}" class="btn btn-info">Add To Shop</a>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+
 {% endblock %} {% block scripts %} {{block.super}} {% bootstrap_javascript %} {% endblock %}
